# isparta-uni-obs-mcp

./: .gitignore  README.md  core.py  pyproject.toml  requirements-mcp.txt  requirements.txt  server.py
.cursor/: mcp.json  prompts.json
