[project]
name = "uni-mcp"
version = "0.1.0"
description = "Öğrenci Bilgi Sistemi (OBS) Entegrasyonu için MCP Sunucusu"
authors = [
    {name = "uni-mcp", email = "user@example.com"}
]
dependencies = [
    "fastmcp>=2.2.0,<3",
    "requests-cache==1.2.1",
    "requests",
    "beautifulsoup4",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
